Migrated to java11 and fixed bug with not sorting table after spinner