@@ -19,8 +19,7 @@ import java.util.stream.Collectors;
 public class JobServiceImp implements JobService {
 
     private List<City> initCities() {
-        return new ArrayList<>(
-                Arrays.asList(
+        return List.of(
                         new City("Warszawa", 1764615, 517.24),
                         new City("Krakow", 767348, 326.85),
                         new City("Lodz", 690422, 293.25),
@@ -31,13 +30,11 @@ public class JobServiceImp implements JobService {
                         new City("Bydgoszcz", 352313, 175.98),
                         new City("Lublin", 339850, 147.5),
                         new City("Bialystok", 297288, 102.12)
-                )
         );
     }
 
     private List<Technology> initTechnologies(){
-        return new ArrayList<>(
-                Arrays.asList(
+        return List.of(
                         new Technology("Java", "Language"),
                         new Technology("Javascript", "Language"),
                         new Technology("Typescript", "Language"),
@@ -71,36 +68,28 @@ public class JobServiceImp implements JobService {
                         new Technology("Gradle", "DevOps"),
                         new Technology("JUnit", "DevOps")
                         // REST, Agile
-
-                )
         );
     }
 
     public List<City> getCities(ModelMap technology) {
         List<City> cities = initCities();
 
+        if(technology.get("technology").toString().toLowerCase().equals("c#")){
+            technology.replace("technology", "c%23");
+        }
+
+        if(technology.get("technology").toString().toLowerCase().equals("c/c++")){
+            technology.replace("technology", "c-x47-c%2b%2b");
+        }
+
         cities.forEach(city -> {
-                    WebClient client = WebClient.create("https://www.pracuj.pl/praca/" + technology.get("technology") + ";kw/" + city.getName().toLowerCase() + ";wp");
+            WebClient url = WebClient.create("https://www.pracuj.pl/praca/" + technology.get("technology") + ";kw/" + city.getName().toLowerCase() + ";wp");
 
-                    Mono<ClientResponse> result = client.get()
-                            .accept(MediaType.TEXT_PLAIN)
-                            .exchange();
+            city.setJobAmount(getJobAmount(url));
 
-                    String resultString = result.flatMap(res -> res.bodyToMono(String.class)).block();
-
-                    // Can be changed in future by site owner
-                    String htmlFirstTag = "<span class=\"results-header__offer-count-text-number\">";
-                    String htmlLastTag = "</span> ofert";
-
-                    if (resultString.contains(htmlFirstTag) && resultString.contains(htmlLastTag)){
-                        city.setJobAmount(Integer.valueOf(resultString.substring(resultString.indexOf(htmlFirstTag) + htmlFirstTag.length(), resultString.indexOf(htmlLastTag))));
-                    } else {
-                        city.setJobAmount(0);
-                    }
-
-                    city.setJobOfferPer100kCitizens((double)Math.round((city.getJobAmount() * 1.0 / (city.getPopulation() / 100000)) * 100 ) / 100);
+            city.setJobOfferPer100kCitizens((double)Math.round((city.getJobAmount() * 1.0 / (city.getPopulation() * 1.0 / 100000)) * 100 ) / 100);
                     city.setDestinyOfPopulation((int)Math.round(city.getPopulation() / city.getAreaSquareKilometers()));
-                }
+            }
         );
 
         return cities;
@@ -112,27 +101,13 @@ public class JobServiceImp implements JobService {
 
         technologies.forEach(technology -> {
 
-            WebClient client = WebClient.create("https://www.pracuj.pl/praca/" + technology.getName().toLowerCase() + ";kw/" + city.get("city") + ";wp");
+            WebClient url = WebClient.create("https://www.pracuj.pl/praca/" + technology.getName().toLowerCase() + ";kw/" + city.get("city") + ";wp");
 
             if((city.get("city").toString().toLowerCase()).equals("polska")){
-                client = WebClient.create("https://www.pracuj.pl/praca/" + technology.getName().toLowerCase() + ";kw");
+                url = WebClient.create("https://www.pracuj.pl/praca/" + technology.getName().toLowerCase() + ";kw");
             }
 
-            Mono<ClientResponse> result = client.get()
-                    .accept(MediaType.TEXT_PLAIN)
-                    .exchange();
-
-            String resultString = result.flatMap(res -> res.bodyToMono(String.class)).block();
-
-            // Can be changed in future by site owner
-            String htmlFirstTag = "<span class=\"results-header__offer-count-text-number\">";
-            String htmlLastTag = "</span> ofert";
-
-            if (resultString.contains(htmlFirstTag) && resultString.contains(htmlLastTag)){
-                technology.setJobOffersAmount(Integer.valueOf(resultString.substring(resultString.indexOf(htmlFirstTag) + htmlFirstTag.length(), resultString.indexOf(htmlLastTag))));
-            } else {
-                technology.setJobOffersAmount(0);
-            }
+            technology.setJobOffersAmount(getJobAmount(url));
 
             if(technology.getName().equals("c%23")){
                 technology.setName("C#");
@@ -143,5 +118,26 @@ public class JobServiceImp implements JobService {
         });
 
         return technologies;
+    }
+
+    private int getJobAmount(WebClient url){
+
+        int jobAmount = 0;
+
+        Mono<ClientResponse> result = url.get()
+                .accept(MediaType.TEXT_PLAIN)
+                .exchange();
+
+        String resultString = result.flatMap(res -> res.bodyToMono(String.class)).block();
+
+        // Can be changed in future by site owner
+        String htmlFirstTag = "<span class=\"results-header__offer-count-text-number\">";
+        String htmlLastTag = "</span> ofert";
+
+        if (resultString != null && resultString.contains(htmlFirstTag) && resultString.contains(htmlLastTag)){
+            jobAmount = Integer.valueOf(resultString.substring(resultString.indexOf(htmlFirstTag) + htmlFirstTag.length(), resultString.indexOf(htmlLastTag)));
+        }
+
+        return jobAmount;
     }
 }
